--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,14 @@ body {
     color: var(--secondary-text-color);
 }
 
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /* Header */
 
 .header {
