--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,23 @@ ul {
     padding-bottom: 94px;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.img {
+    display: block;
+}
+
 /* Header */
 
 .header {
@@ -181,19 +198,6 @@ ul {
 
 /* Section Qualities */
 
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
 .qualities-list {
     display: flex;
     justify-content: space-between;
@@ -263,13 +267,26 @@ ul {
 /* PORTFOLIO.HTML */
 /* Section Portfolio*/
 
+.portfolio-list-btn {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.portfolio-list-btn .item:not(:last-child) {
+    margin-right: 8px;
+}
+
 .portfolio-btn {
+    border: none;
+    border-radius: 4px;
+    padding: 6px 22px;
+
     background-color: var(--gray-background-color);
 
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
-    
 }
 
 .portfolio-btn:hover, 
@@ -283,7 +300,19 @@ ul {
     background-color: var(--accent-color);
 }
 
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.portfolio-list .item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+}
+
 .section-portfolio .subtitle {
+    padding: 20px 24px 4px 24px;
+
     color: var(--primary-text-color);
 
     font-size: 18px;
@@ -292,7 +321,15 @@ ul {
 }
 
 .section-portfolio .text {
+    padding: 0 24px 20px 24px;
+    
     line-height: 1.88;
+}
+
+.card-border {
+    border-left: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
 }
 
 /* Footer */
